Fix alignment issues

--- a/src/components/AlbumDetails/AlbumDetails.module.css
+++ b/src/components/AlbumDetails/AlbumDetails.module.css
@@ -25,6 +25,7 @@
   background: rgba(0, 0, 0, 0.341);
   color: white;
   border-radius: 50%;
+  padding-top: 5px;
   padding-left: 10px;
   padding-right: 10px;
   margin-bottom: 0;
